Revert "Fixed search title overflowing when filter is activated"
This reverts commit 06a11203f0371842808cde0fe51f66a38179d08e.

--- a/RC-SpeechToText/ClientApp/scss/file.scss
+++ b/RC-SpeechToText/ClientApp/scss/file.scss
@@ -125,6 +125,7 @@
 
 .search-title{
     font-size: 18px;
+    margin-top:15px;
     margin-left: 30px;
 }
 
